--- a/ToDoList.html
+++ b/ToDoList.html
@@ -27,14 +27,12 @@
                 <div class="list1 reslist1">
                     <section class="innerSec" id="ToDo">
                         <h2 id="redSec">ToDo</h2>
-                        <ul id="ulred" ondragover="allowDrop(event)" ondrop="drop(event)" /ul>
-                    </section>
-                </div>
-                <div class="list1 reslist2">
-                    <section class="innerSec" id="InProg">
-                        <h2 id="yellowSec">InProgress</h2>
-                        <ul id="ulyellow" ondragover="allowDrop(event)" ondrop="drop(event)"></ul>
-                    </section>
+                        <ul id="ulred" ondragover="allowDrop(event)" ondrop="drop(event)" /ul> </section> </div> <div
+                            class="list1 reslist2">
+                            <section class="innerSec" id="InProg">
+                                <h2 id="yellowSec">InProgress</h2>
+                                <ul id="ulyellow" ondragover="allowDrop(event)" ondrop="drop(event)"></ul>
+                            </section>
                 </div>
                 <div class="list1 reslist3">
                     <section class="innerSec" id="Done">
@@ -46,6 +44,15 @@
         </section>
     </main>
     <script src="./js/script.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.2.10/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
 </body>
 
 </html>
